crates/engine/src/parser/oracle_ir/snapshots/engine__parser__oracle_ir__snapshot_tests__essence_burn_lowered.snap
---
source: crates/engine/src/parser/oracle_ir/snapshot_tests.rs
expression: "&lowered"
---
{
  "abilities": [
    {
      "kind": "Spell",
      "effect": {
        "type": "DealDamage",
        "amount": {
          "type": "Fixed",
          "value": 5
        },
        "target": {
          "type": "Or",
          "filters": [
            {
              "type": "Typed",
              "type_filters": [
                "Creature"
              ],
              "controller": null,
              "properties": [
                {
                  "type": "HasColor",
                  "color": "Black"
                }
              ]
            },
            {
              "type": "Typed",
              "type_filters": [
                "Planeswalker"
              ],
              "controller": null,
              "properties": [
                {
                  "type": "HasColor",
                  "color": "Black"
                }
              ]
            },
            {
              "type": "Typed",
              "type_filters": [
                "Creature"
              ],
              "controller": null,
              "properties": [
                {
                  "type": "HasColor",
                  "color": "Green"
                }
              ]
            },
            {
              "type": "Typed",
              "type_filters": [
                "Planeswalker"
              ],
              "controller": null,
              "properties": [
                {
                  "type": "HasColor",
                  "color": "Green"
                }
              ]
            }
          ]
        }
      },
      "cost": null,
      "sub_ability": {
        "kind": "Spell",
        "effect": {
          "type": "AddTargetReplacement",
          "replacement": {
            "event": "Moved",
            "execute": {
              "kind": "Spell",
              "effect": {
                "type": "ChangeZone",
                "origin": "Battlefield",
                "destination": "Exile",
                "target": {
                  "type": "SelfRef"
                },
                "owner_library": false,
                "enter_transformed": false,
                "enter_tapped": false,
                "enters_attacking": false
              },
              "cost": null,
              "sub_ability": null,
              "duration": null,
              "description": null,
              "target_prompt": null,
              "condition": null,
              "optional_targeting": false,
              "optional": false,
              "forward_result": false
            },
            "mode": {
              "type": "Mandatory"
            },
            "valid_card": {
              "type": "SelfRef"
            },
            "description": null,
            "condition": null,
            "destination_zone": "Graveyard",
            "consume_on_apply": true,
            "expiry": {
              "type": "EndOfTurn"
            }
          },
          "target": {
            "type": "Any"
          }
        },
        "cost": null,
        "sub_ability": null,
        "duration": null,
        "description": null,
        "target_prompt": null,
        "condition": null,
        "optional_targeting": false,
        "optional": false,
        "forward_result": false
      },
      "duration": null,
      "description": "~ deals 5 damage to target black or green creature or planeswalker. If that permanent would die this turn, exile it instead.",
      "target_prompt": null,
      "condition": null,
      "optional_targeting": false,
      "optional": false,
      "forward_result": false
    }
  ],
  "triggers": [],
  "statics": [],
  "replacements": [],
  "extractedKeywords": []
}
